fix scrollbar fix height of text-block on mobile

--- a/src/scss/components/index-page/banner.scss
+++ b/src/scss/components/index-page/banner.scss
@@ -31,10 +31,23 @@
     grid-template-columns: 45% 55%;
   }
 
+  &__wrapper {
+    display: grid;
+    grid-template-rows: auto 1fr;
+  }
+
+  &__content-block {
+    padding-right: 20px;
+    max-height: 400px;
+    height: 100%;
+    overflow: hidden auto;
+  }
+
   &__text-block {
     background: var(--banner-bg);
     max-width: 728px;
     height: 581px;
+    max-height: 585px;
     padding: 25px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
     z-index: 1;
@@ -221,6 +234,8 @@
 
 @media (max-width: 622px) {
   .banner {
+    height: var(--window-height, 100vh);
+
     &__text-block {
       width: 100%;
     }
